# SegmentAnyScene

./: .gitignore  README.md  pyproject.toml
configs/: masks3d.yaml  multiscan.yaml  semantic_sam.yaml
examples/: prepare_dataset.py  prepare_masks3d.py  prepare_segmentation.py
samscene/connectivity/: __init__.py  pix_connectivity.py  pix_to_triangles.py
samscene/dataset/multiscan/: decoder.py  utils.py
samscene/renderer/: __init__.py  pyrender_render.py  pytorch3d_render.py
samscene/segmentation/: __init__.py  semantic_sam.py
samscene/utils/: data_utils.py  io_utils.py
