[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "samscene"
version = "0.0.1"
description = "Segment Anything Model for 3D Scenes"
requires-python = ">=3.9.0"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
]
readme = "README.md"


dependencies = [
    "opencv-python-headless",
    "tqdm",
    "trimesh",
    "plyfile",
    "distinctipy",
    "hydra-core",
    "decord",
    "natsort",
    "colorlog",
]

[tool.setuptools.packages.find]
include = ["samscene*"]
